--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.2",
     "multer": "^1.3.1",
